This version works with nice buttons and a static number displayed after each button is pushed. There is no support for multiple rolls

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">diceSimulator</string>
     <string name="d4_res_tag">D4 Roll: </string>
     <string name ="d4_roll_tag">Roll D4 </string>
-    <string name ="generic_res">Roll a Dice!</string>
+    <string name ="generic_res">Roll Your Dice</string>
 
 </resources>
